<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="6"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ivRecord"
        android:contentDescription="@string/record_icon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingEnd="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/income"
        android:tag="@string/income"
        android:paddingRight="5dp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:text="@string/record_name"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/row_amount"
        android:textSize="22sp" />
</LinearLayout>